[tool.poetry]
name = "grade"
version = "3.0.0"
description = "a package focused on autograding"
authors = ["Tom <info@tomhoward.codes>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/thoward27/grade"
documentation = "https://grade.readthedocs.io/en/latest/"
packages = [
    { include = "grade" }
]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"

[tool.poetry.dev-dependencies]
Sphinx = "^2.4.1"
coverage = "^5.0.3"
black = "^19.10b0"
python-semantic-release = "^4.10.0"
toml = "^0.10.0"
sphinx-rtd-theme = "^0.4.3"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
commit_subject = "build: version bump to v{version}"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
